# TCDSoftwareEngineering

./: .gitignore  README.md
Assignment 1/: .gitignore  CMakeLists.txt
Assignment 1-2/: .gitignore
Assignment 1-2/include/: AdjacencyList.hpp  binarytree.hpp  graph.hpp
Assignment 1-2/src/: AdjacencyList.cpp  Graph.cpp  main.cpp
Assignment 1-2/test/: binary-tests.cpp  graph-testing.cpp
Assignment 1/include/: binarytree.hpp
Assignment 1/src/: a.out  binarytree.cpp  main.cpp  program
Assignment 1/test/: binary-tests.cpp
Git Application/: README.md
Git Application/Server/: apiRoutes.js  config.js  package.json  server.js  webRoutes.js
Git Application/Server/public/: index.html
Git Application/Server/public/commit-heat-map/: index.html
Git Application/Server/public/commit-percentage/: index.html
Git Application/Server/public/connected-user/: index.html
Git Application/Server/public/css/: custom-d3.css  loading.css  styles.css
Git Application/Server/public/d3-example/: index.html
Git Application/Server/public/js/: homepage.js  repo-page.js  repositories-page.js  user-page.js
Git Application/Server/public/js/d3/: connected-user.js  heatMap.js  repoBarChart.js
Git Application/Server/public/profile/: index.html
Git Application/Server/public/repositories/: index.html
Git Application/Server/public/repository/: index.html
Git Application/Server/views/: index.html
